--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,127 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+  --primary-color: #af8b61;
+  ;
+  --accent-color: #656865;
+  --bg-color: #232323;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  letter-spacing: 3px;
+  user-select: none;
+}
+
+html,
+body {
+  height: 100%;
+  background-color: var(--bg-color);
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.chess-btn {
+  border: 1px solid var(--accent-color);
+  padding: 0.5rem 0.65rem;
+  border-radius: 5px;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  width: fit-content;
+  transition: 0.25s ease;
+
+  &:hover {
+    background-color: #333;
+    border-color: var(--primary-color);
+  }
+
+  &.selected {
+    background-color: #333;
+    border-color: var(--primary-color);
+  }
+}
+
+.dialog {
+  padding-inline: 1rem;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100svh;
+  z-index: 100;
+  // background-color: rgba(0, 0, 0, 0.75);
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+
+  img {
+    width: 100px;
+  }
+
+  p {
+    color: white;
+    font-size: 20px;
+    text-transform: capitalize;
+    line-height: 2;
+    max-width: 350px;
+
+  }
+
+  .close-dialog {
+    font-size: 35px;
+    cursor: pointer;
+    color: white;
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    transition: 0.25s ease;
+
+    &:hover {
+      color: var(--primary-color);
+    }
+  }
+}
+
+.actions {
+  width: fit-content;
+  display: flex;
+  gap: 1rem;
+  position: relative;
+
+  small {
+    position: absolute;
+    top: -1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #555;
+    width: 100%;
+  }
+
+  button {
+    img {
+      width: 20px;
+      filter: grayscale(100%) sepia(100%) contrast(150%);
+      transition: 0.25s ease;
+    }
+
+    &:hover>img {
+      filter: grayscale(0);
+    }
+
+    &.selected {
+      img {
+        filter: grayscale(0);
+      }
+    }
+  }
+}
