--- a/src/app/components/chess-board/main-board.component.scss
+++ b/src/app/components/chess-board/main-board.component.scss
@@ -1,82 +1,60 @@
 :host {
-  // min-height: 100svh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  // align-items: center;
-  padding-block: 2rem;
   gap: 1rem;
   position: relative;
 
-  #chess-board {
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
-  }
-
   aside {
-    min-width: 300px;
-    display: flex;
-    flex-direction: column;
-    // justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    border: 1px solid var(--accent-color);
-    border-radius: 15px;
-    padding: 1rem;
 
-    .actions {
-      button {
-        border: none;
+    @media (max-width: 514px) {
+      min-width: 325px;
+    }
 
-        &:hover {
-          background-color: transparent;
+    @media (min-width: 515px) {
+      min-width: 467px;
+    }
+
+    @media (min-width: 715px) {
+      min-width: 667px;
+    }
+
+    @media (min-width: 1080px) {
+      min-width: 400px;
+    }
+
+    min-width: 400px;
+
+    background: url("../../../assets/intro.png") no-repeat center;
+    background-size: contain;
+
+    .overlay {
+      width: 100%;
+      height: 100%;
+      background-color: #232323f5;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      border: 1px solid #444;
+      border-radius: 15px;
+
+      .actions {
+        button {
+          border: none;
+
+          &:hover {
+            background-color: transparent;
+          }
         }
       }
     }
   }
 
-  @media (max-width: 1080px) {
-    #chess-board {
-      flex-direction: column;
-      padding-inline: -5rem;
-    }
 
-    .message {
-      h2 {
-        font-size: 16px;
-      }
-    }
-  }
 }
 
-.lost-pieces {
-  width: 600px;
-
-  &>div {
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
-
-#lost-pieces.board {
-  width: 52px;
-
-  @media (max-width: 1080px) {
-    width: 644px
-  }
-
-  .square {
-    height: 36px;
-    width: 36px;
-
-    .piece {
-      width: 25px;
-    }
-  }
-}
 
 .board {
   display: flex;
@@ -141,6 +119,9 @@
   box-shadow: rgba(0, 0, 0, 0.2) 0px 15px 40px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 18px -6px inset;
 }
 
+.flipped-shadow {
+  box-shadow: rgba(0, 0, 0, 0.2) 0px -15px 40px -12px inset, rgba(0, 0, 0, 0.3) 0px -18px 18px -6px inset;
+}
 
 
 .promotion-dialog {
@@ -187,11 +168,7 @@
 }
 
 .dark {
-  // background-color: #779AAF;
-  // background-color: #323232;
-  // background-color: #6B7280;
   background-color: var(--primary-color);
-  // background-color: black;
 }
 
 .light {
@@ -204,8 +181,6 @@
 }
 
 .selected-square {
-
-  // box-shadow: inset #6b7280 0px 0px 16px 0px, inset #9CA3AF 0px 0px 16px 0px;
   &::after {
     animation: fullUp 0.25s forwards;
   }
@@ -218,7 +193,6 @@
   height: 0;
   width: 0;
   visibility: hidden;
-  // background-color: #bbb;
   background-color: #1c63f280;
   border-radius: 50%;
   z-index: 100;
@@ -228,17 +202,14 @@
 
 
 .king-in-check {
-  // box-shadow: inset #E02424 0px 0px 40px 0px, inset #F05252 0px 0px 40px 0px;
   background-color: #E02424;
 }
 
 .last-move {
-  // box-shadow: inset #057A55 0px 0px 40px 0px, inset rgb(6, 179, 0) 0px 0px 40px 0px;
   background-color: #0E9F6E;
 }
 
 .promotion-square {
-  // box-shadow: inset #1C64F2 0px 0px 16px 0px, inset #76A9FA 0px 0px 16px 0px;
   background-color: #FACA15;
 }
 
@@ -250,10 +221,18 @@
   }
 }
 
+@keyframes fullUp-medium {
+  to {
+    height: 50px;
+    width: 50px;
+    visibility: visible;
+  }
+}
+
 @keyframes fullUp-small {
   to {
-    height: 35px;
-    width: 35px;
+    height: 32px;
+    width: 32px;
     visibility: visible;
   }
 }
@@ -266,6 +245,14 @@
   }
 }
 
+@keyframes full-up-medium {
+  to {
+    height: 15px;
+    width: 15px;
+    visibility: visible;
+  }
+}
+
 @keyframes full-up-small {
   to {
     height: 10px;
@@ -274,26 +261,40 @@
   }
 }
 
-@media (max-width: 680px) {
-  #lost-pieces.board {
-    width: 100%;
-    max-width: 320px;
-    border-radius: 10px;
+@media (min-width: 515px) and (max-width: 715px) {
 
-    .square {
-      height: 16px;
-      width: 16px;
-      border-radius: 5px;
+  .square {
+    height: 50px;
+    width: 50px;
+  }
 
-      .piece {
-        width: 10px;
-      }
+  .safe-square {
+    animation: full-up-medium 0.25s forwards;
+  }
+
+  .selected-square {
+    &::after {
+      animation: fullUp-medium 0.25s forwards;
     }
   }
 
+  .piece {
+    width: 40px;
+  }
+
+  .promotion-dialog {
+    .square:hover {
+      &::after {
+        animation: fullUp-medium 0.25s forwards;
+      }
+    }
+  }
+}
+
+@media (max-width: 514px) {
   .square {
-    height: 35px;
-    width: 35px;
+    height: 32px;
+    width: 32px;
   }
 
   .safe-square {
