--- a/src/app/pages/game-page/game-page.component.scss
+++ b/src/app/pages/game-page/game-page.component.scss
@@ -1,10 +1,6 @@
 :host {
-  height: 100vh;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-block: 1rem;
-  gap: 1rem;
+  padding-block: 2rem;
+  padding-inline: 1rem;
+
 }
