--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
   ;
   --accent-color: #656865;
   --bg-color: #232323;
+  // --bg-color: #232323c5;
 }
 
 * {
@@ -36,7 +37,7 @@ body {
   width: fit-content;
   transition: 0.25s ease;
 
-  &:hover {
+  &:not(:disabled):hover {
     background-color: #333;
     border-color: var(--primary-color);
   }
@@ -44,6 +45,11 @@ body {
   &.selected {
     background-color: #333;
     border-color: var(--primary-color);
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: .5;
   }
 }
 
@@ -65,7 +71,7 @@ body {
   gap: 2rem;
 
   img {
-    width: 100px;
+    width: 150px;
   }
 
   p {
@@ -107,6 +113,17 @@ body {
     width: 100%;
   }
 
+  input {
+
+    padding-block: 0.5rem;
+    padding-inline: 1rem;
+    border-radius: 5px;
+    border: 1px solid var(--accent-color);
+    background-color: transparent;
+    // font-size: 1rem;
+    color: white;
+  }
+
   button {
     img {
       width: 20px;
@@ -124,4 +141,30 @@ body {
       }
     }
   }
+}
+
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+#projectSlider::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--bg-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--primary-color);
+  border-radius: 5px;
 }
