--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,7 +60,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100svh;
+  height: 100vh;
   z-index: 100;
   // background-color: rgba(0, 0, 0, 0.75);
   background-color: var(--bg-color);
