--- a/src/app/components/move-list/move-list.component.scss
+++ b/src/app/components/move-list/move-list.component.scss
@@ -11,7 +11,7 @@
       border: none;
 
       img {
-        filter: invert(0.50) sepia();
+        filter: invert(0.50);
         transition: .25s ease;
       }
 
@@ -27,15 +27,13 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    max-height: 529px;
+    // max-height: 529px;
+    height: calc(90px + 1rem);
     overflow-y: auto;
     scroll-margin-inline: 1rem;
     padding-block: 1rem;
     padding-inline: 0.5rem;
 
-    @media (max-width: 1080px) {
-      height: calc(262px + 1rem);
-    }
 
 
     .row {
@@ -56,12 +54,12 @@
   padding: 0.5rem;
   border-radius: 5px;
   transition: .25s ease;
-  border: 1px solid #444;
+  border: 1px solid var(--secondary-color);
 }
 
 .current-move,
 .move:hover {
-  background-color: #444;
+  border-color: var(--primary-color);
 }
 
 .move-number {
