--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,6 @@
 :host {
-  height: 100vh;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,11 +8,13 @@
   padding-block: 1rem;
   gap: 1rem;
 
+
   nav {
     button {
-      min-width: 250px;
+      min-width: 300px;
       display: block;
       padding-block: 1rem;
+
     }
 
     button:not(:last-child) {
